[gd_scene load_steps=6 format=2]

[ext_resource path="res://TitleScreen/background_room.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/texture_exit.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/texture_title.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen/texture_start_game.png" type="Texture" id=4]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1064.0
margin_bottom = 716.0
size_flags_vertical = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 2160.0
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="TextureRectTitle" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 138.0
margin_top = 350.0
margin_right = 941.0
margin_bottom = 1068.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1088.0
margin_right = 1080.0
margin_bottom = 1413.0
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="TextureButtonStartGame" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 195.0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="TextureButtonExit" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 398.0
margin_top = 600.0
margin_right = 700.0
margin_bottom = 325.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButtonStartGame" to="." method="_on_TextureButtonStartGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButtonExit" to="." method="_on_TextureButtonExit_pressed"]
